--- a/angular.json
+++ b/angular.json
@@ -1,7 +1,9 @@
 {
-  "version": 2,
-  "projects": {
-    "eshop": "apps/eshop",
-    "eshop-e2e": "apps/eshop-e2e"
-  }
+    "version": 2,
+    "projects": {
+        "admin": "apps/admin",
+        "admin-e2e": "apps/admin-e2e",
+        "eshop": "apps/eshop",
+        "eshop-e2e": "apps/eshop-e2e"
+    }
 }
