chore(lint?): allow renaming of selectors

--- a/apps/eshop/.eslintrc.json
+++ b/apps/eshop/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "shoppy",
+            "prefix": "ngshop",
             "style": "camelCase"
           }
         ],
@@ -21,10 +21,12 @@
           "error",
           {
             "type": "element",
-            "prefix": "shoppy",
+            "prefix": "ngshop",
             "style": "kebab-case"
           }
-        ]
+        ],
+        "no-empty-function": "off",
+  "@typescript-eslint/no-empty-function": "off"
       }
     },
     {
