--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,10 @@
         "admin": "apps/admin",
         "admin-e2e": "apps/admin-e2e",
         "eshop": "apps/eshop",
-        "eshop-e2e": "apps/eshop-e2e"
+        "eshop-e2e": "apps/eshop-e2e",
+        "orders": "libs/orders",
+        "products": "libs/products",
+        "ui": "libs/ui",
+        "userss": "libs/userss"
     }
 }
